webtest/k8s/kubernetes.yml
apiVersion: v1
kind: Service
metadata:
  name: "webtest-service"
  labels:
    app: "webtest"
    tier: app
spec:
  selector:
    app: "webtest"
    tier: app
  ports:
    - name: web1
      port: 3000
      targetPort: 3000  

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: "webtest-deployment"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "webtest"
      tier: app
  template:
    metadata:
      name: "webtest"
      labels:
        app: "webtest"
        tier: app
    spec:
      containers:
      - name: "webtest"
        image: "sachinpoddar/webtest:latest"
        # microk8s built-in registry
        # image: "localhost:32000/webtest"
        resources:
          requests:
            memory: "1G"
            cpu: "500m"
          limits:
            memory: "2G"
            cpu: "1000m"
        imagePullPolicy: "IfNotPresent"
        ports:
          - name: web1
            containerPort: 3000
