webtest/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webtest-ingress
  annotations:
    kubernetis.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: webtest-service
              servicePort: 3000
